<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TR54 Server</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="politique">Politique:</string>
    <string name="voie1">Voie 1</string>
    <string name="voie2">Voie 2</string>
    <string name="desc">hh</string>
    <string name="onOff">On/off</string>

</resources>
